python/testData/quickFixes/PyTypeHintsQuickFixTest/selfInTypeComment.py
class A:
    def method(self, i):
        v2 = None  # type: <error descr="Invalid type 'self'">se<caret>lf</error>.B